--- a/data/index.html
+++ b/data/index.html
@@ -12,7 +12,7 @@
     <input type="file" id="videoInput" accept="video/*">
     <canvas id="frameCanvas" width="128" height="64" style="display: none;"></canvas>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@ffmpeg.wasm/main@0.13.1/dist/index.global.min.js"></script> -->
-    <script type="module" src="script.js"></script>
+    <script type="module" src="assets/script.js"></script>
 </body>
 
 </html>
